Possibly resolved issue with content becoming hidden behind header

--- a/micronautpi4j-utils/src/docs/asciidoc/style.css
+++ b/micronautpi4j-utils/src/docs/asciidoc/style.css
@@ -149,7 +149,7 @@ h2 {
 	margin-left: 15.5%;
 	margin-right: 0;
 	margin-bottom: 1%;
-	margin-top: 5%;
+	margin-top: 8%;
 	padding-bottom: 100px;
 }
 
